feat(font): modify default emoji font

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -20,7 +20,8 @@
     <edit name="family" mode="prepend" binding="strong">
       <string>Noto Sans CJK SC</string>
       <string>Noto Sans</string>
-      <string>Twemoji</string>
+      <string>NotoSans Nerd Font</string>
+      <string>Noto Emoji</string>
     </edit>
   </match>
 
@@ -32,7 +33,8 @@
     <edit name="family" mode="prepend" binding="strong">
       <string>Noto Serif CJK SC</string>
       <string>Noto Serif</string>
-      <string>Twemoji</string>
+      <string>NotoSerif Nerd Font</string>
+      <string>Noto Emoji</string>
     </edit>
   </match>
 
@@ -43,8 +45,8 @@
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>Noto Sans Mono CJK SC</string>
-      <string>Symbols Nerd Font</string>
-      <string>Twemoji</string>
+      <string>NotoSansM Nerd Font Mono</string>
+      <string>Noto emoji</string>
     </edit>
   </match>
 
@@ -238,5 +240,4 @@
       <string>Noto Serif</string>
     </edit>
   </match>
-
 </fontconfig>
